2019-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate page containers using the theme file.

	* Clean up <halign> and <valign> elements in theme files, removing
	their redundant level.

	* Generate toolbox containers using the theme file.

2019-07-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate item containers using the theme file.

2019-06-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate pane containers using the theme file.

2019-06-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate tables using the theme file.

2019-06-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* table.C: Fix show_all() on a table.

2019-06-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate context popup menus using the theme file.

2019-06-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate menu items using the theme file.

2019-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create combo-boxes using the theme file.

2019-06-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* combo-box layout managers: renamed selection_changed() to
	on_selection_changed() to be consistent with the list layout managers.
	Disable the inherited selection_type() and on_selection_changed()
	callbacks that are inherited from the list layout manager.

2019-06-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add list layout manager methods that replace list's initial
	callbacks.

	* Create list containers using the theme file.

2019-06-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: replace new_items{} parameter with get_new_items{}
	and return the new listhandlers directly.

2019-06-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: implement on_status_update().

0.24.0

2019-06-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <scrollbar> using the theme file.

2019-06-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <font_picker> and <color_picker> using the theme file.
