@@ -97,7 +97,6 @@
 <!ENTITY toolbox SYSTEM "toolboxlayoutmanager.xml">
 <!ENTITY uigenerator SYSTEM "uigenerator.xml">
 <!ENTITY uixmlappearance_list SYSTEM "../appearance/appearance_list.xml">
-<!ENTITY uixmlbooklayoutelements SYSTEM "uixmldocbooklayoutelements.xml">
 <!ENTITY uixmldocfactorygrid SYSTEM "uixmldocfactorygrid.xml">
 <!ENTITY uixmldoc SYSTEM "uixmldoc.xml">
 <!ENTITY uixmlfactorybook SYSTEM "uixmldocfactorybook.xml">
@@ -107,6 +106,9 @@
 <!ENTITY uixmlfactorypane SYSTEM "uixmldocfactorypane.xml">
 <!ENTITY uixmlfactorytoolbox SYSTEM "uixmldocfactorytoolbox.xml">
 <!ENTITY uixmllayoutbook SYSTEM "uixmldoclayoutbook.xml">
+<!ENTITY uixmllayoutbookelements SYSTEM "uixmldocbooklayoutelements.xml">
+<!ENTITY uixmllayoutborder SYSTEM "uixmldoclayoutborder.xml">
+<!ENTITY uixmllayoutborderelements SYSTEM "uixmldoclayoutborderelements.xml">
 <!ENTITY uixmllayoutcomboboxelements SYSTEM "uixmldoclayoutcomboboxelements.xml">
 <!ENTITY uixmllayoutcombobox SYSTEM "uixmldoclayoutcombobox.xml">
 <!ENTITY uixmllayoutgridelements SYSTEM "uixmldoclayoutgridelements.xml">
