@@ -1,0 +1,16 @@
+/*
+** Copyright 2019 Double Precision, Inc.
+** See COPYING for distribution information.
+*/
+#include "libcxxw_config.h"
+#include "uicompiler.H"
+#include "messages.H"
+#include "x/w/borderlayoutmanager.H"
+#include "x/w/uigenerators.H"
+
+LIBCXXW_NAMESPACE_START
+
+#include "uicompiler.inc.H/borderlayout_parse_parameters.H"
+#include "uicompiler.inc.H/borderlayout_parser.H"
+
+LIBCXXW_NAMESPACE_END
